--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "Here, we illustrate the application of the HME framework.\n",
     "\n",
-    "Note that before running this notebook, please make sure you have completed the `Merge Model Weights` step in README.md and all previous steps."
+    "Before running this notebook, please ensure that you have completed the `Merge Model Weights` step in the README.md, along with all preceding steps."
    ]
   },
   {
@@ -786,6 +786,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fb5d712d",
+   "metadata": {},
+   "source": [
+    "The following code illustrates how the generated molecule is broken down into fragments."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a3b19a63",
@@ -795,7 +803,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The generated SMILES contains the following fragments: <|Clc1ccccc1|><|C1CNCCN1|>\n",
+      "The generated SMILES contains the following 2 fragments: <|Clc1ccccc1|><|C1CNCCN1|>\n",
       "The fragmented molecule is visualized below:\n"
      ]
     },
@@ -805,32 +813,32 @@
        "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:rdkit=\"http://www.rdkit.org/xml\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" version=\"1.1\" baseProfile=\"full\" xml:space=\"preserve\" width=\"200px\" height=\"200px\" viewBox=\"0 0 200 200\">\n",
        "<!-- END OF HEADER -->\n",
        "<rect style=\"opacity:1.0;fill:#FFFFFF;stroke:none\" width=\"200.0\" height=\"200.0\" x=\"0.0\" y=\"0.0\"> </rect>\n",
-       "<path class=\"bond-0 atom-0 atom-1\" d=\"M 32.8,113.1 L 37.4,113.7 L 39.2,118.0 L 22.1,140.3 L 15.7,135.3 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-1 atom-1 atom-2\" d=\"M 21.1,85.1 L 30.4,86.3 L 40.2,110.0 L 37.4,113.7 L 32.8,113.1 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-6 atom-1 atom-12\" d=\"M 40.2,110.0 L 65.7,113.3 L 69.3,122.0 L 39.2,118.0 L 37.4,113.7 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-2 atom-2 atom-3\" d=\"M 42.4,57.3 L 46.0,65.9 L 30.4,86.3 L 21.1,85.1 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-3 atom-3 atom-4\" d=\"M 42.4,57.3 L 77.1,61.8 L 71.5,69.3 L 46.0,65.9 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-4 atom-4 atom-5\" d=\"M 77.1,61.8 L 90.6,94.2 L 81.3,93.0 L 71.5,69.3 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-5 atom-5 atom-12\" d=\"M 81.3,93.0 L 90.6,94.2 L 69.3,122.0 L 65.7,113.3 Z\" style=\"fill:#C5E9C7;fill-rule:evenodd;fill-opacity:1;stroke:#C5E9C7;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-11 atom-6 atom-11\" d=\"M 111.4,96.9 L 120.6,98.1 L 130.5,121.8 L 124.8,129.2 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-12 atom-6 atom-7\" d=\"M 132.7,69.1 L 136.2,77.7 L 120.6,98.1 L 111.4,96.9 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-7 atom-7 atom-8\" d=\"M 132.7,69.1 L 167.4,73.7 L 161.7,81.1 L 136.2,77.7 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-8 atom-8 atom-9\" d=\"M 167.4,73.7 L 180.8,106.0 L 171.5,104.8 L 161.7,81.1 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-9 atom-9 atom-10\" d=\"M 171.5,104.8 L 180.8,106.0 L 159.5,133.8 L 155.9,125.2 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<path class=\"bond-10 atom-10 atom-11\" d=\"M 130.5,121.8 L 155.9,125.2 L 159.5,133.8 L 124.8,129.2 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
-       "<ellipse cx=\"15.2\" cy=\"137.9\" rx=\"6.1\" ry=\"6.6\" class=\"atom-0\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"37.4\" cy=\"113.7\" rx=\"6.1\" ry=\"6.1\" class=\"atom-1\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"25.8\" cy=\"85.7\" rx=\"6.1\" ry=\"6.1\" class=\"atom-2\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"44.2\" cy=\"61.6\" rx=\"6.1\" ry=\"6.1\" class=\"atom-3\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"74.3\" cy=\"65.6\" rx=\"6.1\" ry=\"6.1\" class=\"atom-4\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"85.9\" cy=\"93.6\" rx=\"6.1\" ry=\"6.1\" class=\"atom-5\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"116.0\" cy=\"97.5\" rx=\"6.1\" ry=\"6.1\" class=\"atom-6\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"134.5\" cy=\"73.4\" rx=\"6.1\" ry=\"6.1\" class=\"atom-7\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"164.5\" cy=\"77.4\" rx=\"6.1\" ry=\"6.1\" class=\"atom-8\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"180.4\" cy=\"105.4\" rx=\"10.5\" ry=\"6.1\" class=\"atom-9\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"157.7\" cy=\"129.5\" rx=\"6.1\" ry=\"6.1\" class=\"atom-10\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"127.6\" cy=\"125.5\" rx=\"6.1\" ry=\"6.1\" class=\"atom-11\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
-       "<ellipse cx=\"67.5\" cy=\"117.7\" rx=\"6.1\" ry=\"6.1\" class=\"atom-12\" style=\"fill:#C5E9C7;fill-rule:evenodd;stroke:#C5E9C7;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<path class=\"bond-0 atom-0 atom-1\" d=\"M 32.8,113.1 L 37.4,113.7 L 39.2,118.0 L 22.1,140.3 L 15.7,135.3 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-1 atom-1 atom-2\" d=\"M 21.1,85.1 L 30.4,86.3 L 40.2,110.0 L 37.4,113.7 L 32.8,113.1 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-6 atom-1 atom-12\" d=\"M 40.2,110.0 L 65.7,113.3 L 69.3,122.0 L 39.2,118.0 L 37.4,113.7 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-2 atom-2 atom-3\" d=\"M 42.4,57.3 L 46.0,65.9 L 30.4,86.3 L 21.1,85.1 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-3 atom-3 atom-4\" d=\"M 42.4,57.3 L 77.1,61.8 L 71.5,69.3 L 46.0,65.9 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-4 atom-4 atom-5\" d=\"M 77.1,61.8 L 90.6,94.2 L 81.3,93.0 L 71.5,69.3 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-5 atom-5 atom-12\" d=\"M 81.3,93.0 L 90.6,94.2 L 69.3,122.0 L 65.7,113.3 Z\" style=\"fill:#BFCFE4;fill-rule:evenodd;fill-opacity:1;stroke:#BFCFE4;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-11 atom-6 atom-11\" d=\"M 111.4,96.9 L 120.6,98.1 L 130.5,121.8 L 124.8,129.2 Z\" style=\"fill:#D9D9D9;fill-rule:evenodd;fill-opacity:1;stroke:#D9D9D9;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-12 atom-6 atom-7\" d=\"M 132.7,69.1 L 136.2,77.7 L 120.6,98.1 L 111.4,96.9 Z\" style=\"fill:#D9D9D9;fill-rule:evenodd;fill-opacity:1;stroke:#D9D9D9;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-7 atom-7 atom-8\" d=\"M 132.7,69.1 L 167.4,73.7 L 161.7,81.1 L 136.2,77.7 Z\" style=\"fill:#D9D9D9;fill-rule:evenodd;fill-opacity:1;stroke:#D9D9D9;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-8 atom-8 atom-9\" d=\"M 167.4,73.7 L 180.8,106.0 L 171.5,104.8 L 161.7,81.1 Z\" style=\"fill:#D9D9D9;fill-rule:evenodd;fill-opacity:1;stroke:#D9D9D9;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-9 atom-9 atom-10\" d=\"M 171.5,104.8 L 180.8,106.0 L 159.5,133.8 L 155.9,125.2 Z\" style=\"fill:#D9D9D9;fill-rule:evenodd;fill-opacity:1;stroke:#D9D9D9;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<path class=\"bond-10 atom-10 atom-11\" d=\"M 130.5,121.8 L 155.9,125.2 L 159.5,133.8 L 124.8,129.2 Z\" style=\"fill:#D9D9D9;fill-rule:evenodd;fill-opacity:1;stroke:#D9D9D9;stroke-width:0.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1;\"/>\n",
+       "<ellipse cx=\"15.2\" cy=\"137.9\" rx=\"6.1\" ry=\"6.6\" class=\"atom-0\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"37.4\" cy=\"113.7\" rx=\"6.1\" ry=\"6.1\" class=\"atom-1\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"25.8\" cy=\"85.7\" rx=\"6.1\" ry=\"6.1\" class=\"atom-2\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"44.2\" cy=\"61.6\" rx=\"6.1\" ry=\"6.1\" class=\"atom-3\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"74.3\" cy=\"65.6\" rx=\"6.1\" ry=\"6.1\" class=\"atom-4\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"85.9\" cy=\"93.6\" rx=\"6.1\" ry=\"6.1\" class=\"atom-5\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"116.0\" cy=\"97.5\" rx=\"6.1\" ry=\"6.1\" class=\"atom-6\" style=\"fill:#D9D9D9;fill-rule:evenodd;stroke:#D9D9D9;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"134.5\" cy=\"73.4\" rx=\"6.1\" ry=\"6.1\" class=\"atom-7\" style=\"fill:#D9D9D9;fill-rule:evenodd;stroke:#D9D9D9;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"164.5\" cy=\"77.4\" rx=\"6.1\" ry=\"6.1\" class=\"atom-8\" style=\"fill:#D9D9D9;fill-rule:evenodd;stroke:#D9D9D9;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"180.4\" cy=\"105.4\" rx=\"10.5\" ry=\"6.1\" class=\"atom-9\" style=\"fill:#D9D9D9;fill-rule:evenodd;stroke:#D9D9D9;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"157.7\" cy=\"129.5\" rx=\"6.1\" ry=\"6.1\" class=\"atom-10\" style=\"fill:#D9D9D9;fill-rule:evenodd;stroke:#D9D9D9;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"127.6\" cy=\"125.5\" rx=\"6.1\" ry=\"6.1\" class=\"atom-11\" style=\"fill:#D9D9D9;fill-rule:evenodd;stroke:#D9D9D9;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
+       "<ellipse cx=\"67.5\" cy=\"117.7\" rx=\"6.1\" ry=\"6.1\" class=\"atom-12\" style=\"fill:#BFCFE4;fill-rule:evenodd;stroke:#BFCFE4;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
        "<path class=\"bond-0 atom-0 atom-1\" d=\"M 20.5,135.8 L 37.4,113.7\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
        "<path class=\"bond-1 atom-1 atom-2\" d=\"M 37.4,113.7 L 25.8,85.7\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
        "<path class=\"bond-1 atom-1 atom-2\" d=\"M 40.6,109.6 L 31.0,86.4\" style=\"fill:none;fill-rule:evenodd;stroke:#000000;stroke-width:1.0px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1\"/>\n",
@@ -877,8 +885,8 @@
     "from hme.psvae.mol_bpe import Tokenizer\n",
     "from IPython.display import SVG\n",
     "\n",
-    "fragments,_,fragmented_mol=get_frg_from_one_smiles(gen_smiles,vocab_file='./src/hme/fragment_vocabs/vocab_800_other_tasks.txt',verbose=True)\n",
-    "print('The generated SMILES contains the following fragments:',fragments)\n",
+    "fragments,_,fragmented_mol=get_frg_from_one_smiles(gen_smiles,vocab_file='../src/hme/fragment_vocabs/vocab_800_other_tasks.txt',verbose=True)\n",
+    "print(f'The generated SMILES contains the following {len(fragments.split(\"><\"))} fragments: {fragments}')\n",
     "\n",
     "print('The fragmented molecule is visualized below:')\n",
     "SVG(fragmented_mol[0].to_SVG())"
