--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -790,7 +790,7 @@
    "id": "fb5d712d",
    "metadata": {},
    "source": [
-    "The following code illustrates how the generated molecule is broken down into fragments."
+    "**Multi-Fragment-Conditional Molecule Generation**: the following code illustrates how the generated molecule is broken down into fragments."
    ]
   },
   {
