--- a/tutorials/reproduce.ipynb
+++ b/tutorials/reproduce.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "e271943a",
    "metadata": {},
    "outputs": [
@@ -36,7 +36,7 @@
    ],
    "source": [
     "from hme.metrics.mol2text_metrics import eval_mol2text\n",
-    "file_path= '/home/lvliuzhenghao/llzh/LightMoLlama/x9new_results/Meta-Llama-3-8B-Instruct_pretrain_merged_pretrain-s2_merged_caption_merged_caption/result.jsonl'\n",
+    "file_path= './captioning/result.jsonl'\n",
     "#Evaluate the model's performance\n",
     "results=eval_mol2text(input_file=file_path)\n",
     "#Show the reuslts: bleu2, bleu4, rouge_1, rouge_2, rouge_l, meteor_score\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "87d11225",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
    ],
    "source": [
     "from hme.metrics.mol2text_metrics import eval_mol2text\n",
-    "file_path= '/home/lvliuzhenghao/llzh/LightMoLlama/x9new_results/Meta-Llama-3-8B-Instruct_pretrain_merged_general-qa_merged_qa/result.jsonl'\n",
+    "file_path= './general-qa/result.jsonl'\n",
     "#Evaluate the model's performance\n",
     "results=eval_mol2text(input_file=file_path)\n",
     "#Show the reuslts: bleu2, bleu4, rouge_1, rouge_2, rouge_l, meteor_score\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "54c98165",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
    ],
    "source": [
     "from hme.metrics.number_metrics import eval_number\n",
-    "file_path= '/home/lvliuzhenghao/llzh/LightMoLlama/x9new_results/Meta-Llama-3-8B-Instruct_pretrain_merged_property-qa-1_merged_qa/result.jsonl'\n",
+    "file_path= './property-qa/result.jsonl'\n",
     "#Evaluate the model's performance\n",
     "results=eval_number(input_file=file_path)\n",
     "#Print the MAE\n",
