--- a/tutorials/reproduce.ipynb
+++ b/tutorials/reproduce.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "254da2b5",
+   "metadata": {},
+   "source": [
+    "First, please downloading the output files from https://huggingface.co/datasets/GreatCaptainNemo/HME_outputs\n",
+    "\n",
+    "And put them in the current directory."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2ab4836b",
    "metadata": {},
    "source": [
-    "### Reproduce Table 1 (the Molecular Captioning task)"
+    "Reproduce Table 1 (the Molecular Captioning task)"
    ]
   },
   {
@@ -53,7 +63,7 @@
    "id": "08317989",
    "metadata": {},
    "source": [
-    "### Reproduce Table 1 (the Molecular General QA task)"
+    "Reproduce Table 1 (the Molecular General QA task)"
    ]
   },
   {
@@ -101,7 +111,7 @@
    "id": "a60207ce",
    "metadata": {},
    "source": [
-    "### Reproduce Supplementary Table 12 (the Molecular Property QA task)"
+    "Reproduce RMSE in Figure 2(b) (the Molecular Property QA task)"
    ]
   },
   {
@@ -114,7 +124,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing...: 100%|██████████| 7785/7785 [00:00<00:00, 83144.24it/s]"
+      "Processing...: 100%|██████████| 7785/7785 [00:00<00:00, 74945.22it/s]"
      ]
     },
     {
@@ -128,8 +138,7 @@
       "weight: RMSE value is 16.3248\n",
       "logp: RMSE value is 0.7365\n",
       "topological polar surface area: RMSE value is 8.7146\n",
-      "complexity: RMSE value is 86.4080\n",
-      "MAE: 6.59, 0.41, 3.24, 20.54\n"
+      "complexity: RMSE value is 86.4080\n"
      ]
     },
     {
@@ -142,10 +151,35 @@
    ],
    "source": [
     "from hme.metrics.number_metrics import eval_number\n",
-    "file_path= './property-qa/result.jsonl'\n",
-    "#Evaluate the model's performance\n",
-    "results=eval_number(input_file=file_path)\n",
-    "#Print the MAE\n",
+    "file_path= 'property-qa/result.jsonl'\n",
+    "#Evaluate the model's performance of the first 4 properties: MolWt, logp, tpsa, complexity\n",
+    "results=eval_number(input_file=file_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4820ceb0",
+   "metadata": {},
+   "source": [
+    "Reproduce Supplementary Table 12 (the Molecular Property QA task)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a3fa26ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE: 6.59, 0.41, 3.24, 20.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Print the MAE of the first 4 properties: MolWt, logp, tpsa, complexity\n",
     "formatted = [f\"{item:.2f}\" for item in results]\n",
     "print(f\"MAE: {', '.join(formatted[:4])}\")"
    ]
